😁Fix: Fixed a visual bug on mobile

--- a/src/pages/main/components/card/card.scss
+++ b/src/pages/main/components/card/card.scss
@@ -53,6 +53,10 @@
         .card {
             width: 12rem;
             margin: .2rem;
+
+            .img-container {
+                min-height: 18rem;
+            }
         }
     }
 }
