--- a/src/pages/main/pages/movies/assets/scss/movies.scss
+++ b/src/pages/main/pages/movies/assets/scss/movies.scss
@@ -2,9 +2,14 @@
 
     h2 {
         font-size: 1.5rem;
+        margin: 0 1rem;
     }
 
     .movies-section {
         min-height: 100vh;
+    }
+
+    h4 {
+        text-align: center;
     }
 }
